# modbusEdit

./: .gitignore  CMakeLists.txt  MBedit.c  addressconverter.cpp  constants.h  deploy.bat  generate_big_profile.py  jsonprofilemanager.cpp  jsonprofilemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outFile.c  outfilegenerator.cpp  outfilegenerator.h  profile.json  profile2.json  profile3.json  profileoperations.cpp  resources.qrc  tablemanager.cpp  tablemanager.h  usercodeeditordialog.cpp  usercodeeditordialog.h
.claude/: settings.local.json
include/: addressconverter.h  comboboxdelegate.h  constants.h  dynamiccomboboxdelegate.h  jsonprofilemanager.h  mainwindow.h  outfilegenerator.h  profileoperations.h  tablemanager.h  usercodeeditordialog.h
src/: addressconverter.cpp  comboboxdelegate.cpp  dynamiccomboboxdelegate.cpp  jsonprofilemanager.cpp  main.cpp  mainwindow.cpp  mainwindow_old.cpp  outfilegenerator.cpp  profileoperations.cpp  tablemanager.cpp
